package com.mycompany.proyectoprograii;

public class AsientoVIP(){

    private boolean espacioExtraPiernas;
    private boolean reclinable;
    //oe como que objeto de interfaz oe

    public boolean estaDisponible(){
        //oe Y=???
    }


}