package com.mycompany.proyectoprograii;

public class Funcion implements IPelicula, ISala{
    private String id;
    private //oe corrige oe



}