package com.mycompany.proyectoprograii;

public interface IAsiento {
    public String obtenerNumero();
    public boolean obtenerEstado();
    public void reservar();
    public void liberar();
}
