package com.mycompany.proyectoprograii;

public interface IPelicula {
    String obtenerTitulo();
    String obtenerGenero();
    int obtenerDuracion();
    int obtenerRestriccionEdad();
}