package com.mycompany.proyectoprograii;

public interface ISala{
    String obtenerId();
    int contarAsientosDisponibles();
}